--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "capstone-project",
   "version": "0.1.0",
   "engines": {
-    "node": "16.15.x",
-    "npm": "8.5.x"
+    "node": "16.15.0",
+    "npm": "8.5.5"
   },
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
