--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "capstone-project",
   "version": "0.1.0",
   "engines": {
-    "node": "16.15.0",
-    "npm": "8.5.5"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "private": true,
   "dependencies": {
