--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "capstone-project",
   "version": "0.1.0",
   "engines": {
-    "node": "16.x",
-    "npm": "8.x"
+    "node": "16.15.0"
   },
   "private": true,
   "dependencies": {
